# triemap-generics

./: TrieMap1.hs  TrieMap2.hs  TrieMap3.hs  triemap-generics.cabal
TrieMap3/: Class.hs  TH.hs
